image appears at center

--- a/image/CMakeLists.txt
+++ b/image/CMakeLists.txt
@@ -8,11 +8,11 @@ if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   endif()
 endif()
 
-project(basic)
+project(Image)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(VITA_APP_NAME "Basic")
-set(VITA_TITLEID  "ET0000001")
+set(VITA_APP_NAME "Image")
+set(VITA_TITLEID  "ET0000002")
 set(VITA_VERSION  "01.00")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
@@ -23,28 +23,33 @@ include_directories()
 add_executable( ${PROJECT_NAME} main.cpp )
 
 target_link_libraries(${PROJECT_NAME}
-  SDL2
-  vita2d
-  SceDisplay_stub
-  SceCtrl_stub
-  SceAudio_stub
-  SceSysmodule_stub
-  SceGxm_stub
-  SceCommonDialog_stub
-  SceAppMgr_stub
-  SceTouch_stub
-  SceHid_stub
-  stdc++
-  pthread
-  m
+ 	SDL2
+	SDL2_image
+	jpeg
+	png
+	vita2d
+	SceDisplay_stub
+	SceCtrl_stub
+	SceAudio_stub
+	SceSysmodule_stub
+	SceGxm_stub
+	SceCommonDialog_stub
+	SceAppMgr_stub
+	SceTouch_stub
+	SceHid_stub
+	stdc++
+	pthread
+	m
+	z
 )
 
 vita_create_self(${PROJECT_NAME}.self ${PROJECT_NAME})
 vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
-  VERSION ${VITA_VERSION}
-  NAME ${VITA_APP_NAME}
-  FILE sce_sys/icon0.png sce_sys/icon0.png
-  FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
-  FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
-  FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
+	VERSION ${VITA_VERSION}
+	NAME ${VITA_APP_NAME}
+	FILE assets/epicface.png assets/epicface.png  ## including image in VPK
+	FILE sce_sys/icon0.png sce_sys/icon0.png
+	FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
+	FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
+	FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
 )
