--- a/text/CMakeLists.txt
+++ b/text/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(${PROJECT_NAME}
   SceAppMgr_stub
   SceTouch_stub
   SceHid_stub
+  SceMotion_stub
   freetype
   png
   stdc++
