mp4 can be parsed into packets

--- a/vita2d/decode/CMakeLists.txt
+++ b/vita2d/decode/CMakeLists.txt
@@ -54,6 +54,7 @@ vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
   VERSION ${VITA_VERSION}
   NAME ${VITA_APP_NAME}
   FILE test.mp4 test.mp4
+  FILE WakeUp.mp4 WakeUp.mp4
   FILE sce_sys/icon0.png sce_sys/icon0.png
   FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
   FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
