added sample which plays an mp4 video

--- a/vita2d/video/CMakeLists.txt
+++ b/vita2d/video/CMakeLists.txt
@@ -8,31 +8,24 @@ if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   endif()
 endif()
 
-project(decode)
+project(video)
 include("${VITASDK}/share/vita.cmake" REQUIRED)
 
-set(VITA_APP_NAME "Decode")
+set(VITA_APP_NAME "Video")
 set(VITA_TITLEID  "ET0000016")
 set(VITA_VERSION  "01.00")
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-aux_source_directory(libavcodec AVCODEC_SRC)
-add_executable( ${PROJECT_NAME} main.cpp )
+include_directories( include )
+add_executable( ${PROJECT_NAME} main.cpp utils.cpp )
 
 target_link_libraries(${PROJECT_NAME}
   vitaGL
   vita2d
   vitashark
-  avcodec
-  avutil
-  mp3lame
-  swresample
-  mathneon
   SceShaccCg_stub
-  SceVideodec_stub
-  SceSysmem_stub
   SceDisplay_stub
   SceCtrl_stub
   SceAudio_stub
@@ -43,6 +36,9 @@ target_link_libraries(${PROJECT_NAME}
   SceTouch_stub
   SceHid_stub
   SceMotion_stub
+  SceAvPlayer_stub
+  SceIofilemgr_stub
+  ScePgf_stub
   stdc++
   pthread
   m
