--- a/vita2d/video/CMakeLists.txt
+++ b/vita2d/video/CMakeLists.txt
@@ -18,7 +18,6 @@ set(VITA_VERSION  "01.00")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-include_directories( include )
 add_executable( ${PROJECT_NAME} main.cpp utils.cpp )
 
 target_link_libraries(${PROJECT_NAME}
@@ -49,7 +48,7 @@ vita_create_self(${PROJECT_NAME}.self ${PROJECT_NAME})
 vita_create_vpk(${PROJECT_NAME}.vpk ${VITA_TITLEID} ${PROJECT_NAME}.self
   VERSION ${VITA_VERSION}
   NAME ${VITA_APP_NAME}
-  FILE WakeUp.mp4 WakeUp.mp4
+  FILE gameplay.mp4 gameplay.mp4
   FILE sce_sys/icon0.png sce_sys/icon0.png
   FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
   FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
